k8s_deployments/glbc_controller/glbc_ingress_rules.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "gce"
  name: shippy-ingress
  namespace: shippy-grpc
spec:
  tls:
  - hosts:
    - shippy.example.com
    secretName: shippy-secret
  rules:
  - host: shippy.example.com
    http:
      paths:
      - path: /ui
        backend:
          serviceName: client
          servicePort: 5000 
      - path: /getShippment
        backend:
          serviceName: client
          servicePort: 5000
      - path: /getCarrier
        backend:
          serviceName: client
          servicePort: 5000
      - path: /Carrier/GetCarrier
        backend:
          serviceName: vessel
          servicePort: 50052
      - path: /Shippment/GetShippment
        backend:
          serviceName: consignment
          servicePort: 50051
      - path: /Shippment/GetCarrierForShippment
        backend:
          serviceName: consignment
          servicePort: 50051
